--- a/public/css/modules/variables.scss
+++ b/public/css/modules/variables.scss
@@ -1,8 +1,9 @@
 /*
 Font variables
 */
-$font:'HelveticaNeueLTStd-Lt';
-$font_ultra_light:'HelveticaNeueLT-UltraLight';
+//$font:'HelveticaNeueLTStd-Lt';
+$font:'Lato';
+//$font_ultra_light:'HelveticaNeueLT-UltraLight';
 
 /*
 Margins
@@ -26,6 +27,8 @@ $blueBtn:#3f55af;
 $blueBtnBorder:#284083;
 $greenBtn:#18ae60;
 $greenBtnBorder:#246e36;
+$lightGreenBtn:#2ECC71;
+$lightGreenBtnBorder:#27AE60;
 $lightBlueBtn:#50ade5;
 $lightBlueBtnBorder:#3c86ad;
 $btnTextColor:white;
