--- a/public/css/modules/general.scss
+++ b/public/css/modules/general.scss
@@ -24,8 +24,8 @@ body{
         color:$titleColor;
         text-transform:uppercase;
         font-size:1.2em;
-        margin-top:80px;
-        margin-bottom:40px;
+        margin-top:20px;
+        margin-bottom:20px;
         font-weight:900;
 
         @media screen and (min-width: 360px){
@@ -61,6 +61,12 @@ body{
         border-color: $greenBtnBorder;
         text-transform:uppercase;
     }
+    .lightGreenBtn{
+        @include borderBtn;
+        background-color:$lightGreenBtn;
+        border-color: $lightGreenBtnBorder;
+        text-transform:uppercase;
+    }
     .lightBlueBtn{
         @include borderBtn;
         background-color: $lightBlueBtn;
@@ -74,16 +80,13 @@ body{
 .newPage{
 
     img{
-        max-width: 30%;
-        margin-bottom: 60px;
-
-        @media screen and (min-width: 360px){
-            max-width:40%;
-        }
+        max-width: 40%;
+        margin-bottom: 50px;
+        margin-top: 25px;
     }
 
     &:nth-child(n+3) img{
-        margin: 60px 0px;
+        margin: 80px 0px 40px;
     }
 
     input{
@@ -122,7 +125,7 @@ body{
     }
 
     .btn-group{
-        position:absolute;
+        position:relative;
         bottom:20px;
         left:0;
         right:0;
@@ -155,28 +158,55 @@ nav{
     position: fixed;
     top:0;
     display:block;
+    height: 40px;
     width:100%;
     color: $titleColor;
+    background-color: rgba(245,245,245,0.6);
     font-weight:bold;
     font-size:1.1em;
+    z-index: 10;
+    @include text-shadow(1px,1px,1px,1px,0.5);
 
     @media screen and (min-width: 360px){
         font-size:1.3em;
+    }
+    
+    span{
+//        height: 30px;
+//        width: 100px;
+//        border-radius: 10%;
+//        border: 1px solid rgba(255,255,255,0.8);
+//        background-color: rgba(255,255,255,0.8);
     }
 
     span:first-child{
 
         position:absolute;
-        top:20px;
+        top:7px;
         left:20px;
+        
+//        >a{
+//        background-color: rgba(255,255,255,0.8);
+//        }
     }
 
     span:nth-child(2){
         position:absolute;
-        top:20px;
+        top:7px;
         right:20px;
+//        >a{
+//            background-color: rgba(255,255,255,0.8);
+//        }
     }
 
+}
+
+/*MAP*/
+
+html, body, #map_canvas { 
+    height: 100%; 
+    margin: 0; 
+    padding: 0;
 }
 
 *,*:after,*:before{
@@ -255,4 +285,30 @@ input{
     @media only screen and (max-width: 639px){
         display:none;
     }
+}
+
+.content{
+    margin-top: 20px;
+}
+
+#content {
+    padding: 0 !important; 
+    position : absolute !important; 
+    top : 0 !important; 
+    right : 0 !important; 
+    bottom : 0 !important;  
+    left : 0 !important;     
+}
+
+.my-gmaps{
+    position: absolute;
+    display: inline-block;
+    background-image: url('../images/map.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 3em;
+    height: 3em;
+    bottom: 15px;
+    right: 10px;
 }
