--- a/public/css/partials/main-screen-parked.scss
+++ b/public/css/partials/main-screen-parked.scss
@@ -5,13 +5,7 @@
     margin:0;
 
     h1{
-        padding:0;;
-        margin:15px 0;
-        margin-top:35px;
-
-        @media screen and (min-width: 360px){
-            margin-bottom:25px;
-        }
+        padding:0;
     }
 
     time{
@@ -27,7 +21,7 @@
 
         @media screen and (min-width: 360px){
             padding: 0 0 0 85px;
-            font-size:3.5em;
+            font-size:2.5em;
             background-image:url('../images/img_disc_on.png');
             background-size:80px;
             margin-bottom:25px;
