--- a/public/css/partials/park-here-disc.scss
+++ b/public/css/partials/park-here-disc.scss
@@ -1,6 +1,7 @@
 /* #PARK HERE DISC*/
 
-#park-here-disc{
+#park-here-disc,
+#park-here-meter{
     time{
 
         display:block;
@@ -8,9 +9,15 @@
         text-align:center;
         font-weight:bold;
         font-family: 'Lato', sans-serif;
+        margin-bottom: 50px;
+        margin-top: -15px;
 
         @media screen and (min-width: 360px){
             font-size:3em;
         }
+    }
+    
+    label[for="time"]{
+        margin-bottom: 50px;
     }
 }
