--- a/public/css/partials/park-here-notes.scss
+++ b/public/css/partials/park-here-notes.scss
@@ -1,11 +1,14 @@
 /* #PARK HERE NOTES */
 
 #park-here-notes{
+    
+    .content{
+        padding: 1em;
+    }
 
     h1{
         font-family: 'Lato' sans-serif;
-        font-size:2.0em;
-        margin-top:10px;
+        font-size:1.2em;
 
         @media screen and (min-width: 360px){
             font-size:2.5em;
@@ -15,16 +18,23 @@
     textarea{
         border:0;
         @include whiteInput;
-        width:70%;
-        min-height:180px;
+        width:65%;
+        //min-height:180px;
         font-family:'Lato', sans-serif;
         text-transform: uppercase;
+        font-size: 20px;
         color:$titleColor;
         padding:5px;
+        margin-bottom: 20px;
 
         @media screen and (min-width: 360px){
-            min-height:280px;
+            //min-height:280px;
+            width:85%;
             padding:15px;
         }
+    }
+    
+    .alsuite{
+        position: relative;
     }
 }
