--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -11,6 +11,7 @@
 @import "partials/park-here-disc";
 @import "partials/park-here-notes";
 @import "partials/report-controller";
+@import "partials/map";
 @import "partials/dialog";
 @import "partials/dialog-delete";
 //icon part (in last posiion so it has a highest priority)
