--- a/public/css/modules/variables.scss
+++ b/public/css/modules/variables.scss
@@ -25,6 +25,8 @@ $redBtn:#e62423;
 $redBtnBorder:#9d1b20;
 $blueBtn:#3f55af;
 $blueBtnBorder:#284083;
+$fbBtn:#48649C;
+$fbBtnBorder:#304476;
 $greenBtn:#18ae60;
 $greenBtnBorder:#246e36;
 $lightGreenBtn:#2ECC71;
