--- a/public/css/partials/dialog-delete.scss
+++ b/public/css/partials/dialog-delete.scss
@@ -27,6 +27,10 @@
         .yes{
             margin-right: 0;
         }
+        
+        .fbBtn{
+            width: 80%;
+        }
 
         h1{
             font-family: $font,'Roboto','Helvetica', sans-serif;
